--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "netflixclone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://KedywO.github.io/netflixclone",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "axois": "^0.0.1-security",
+    "gh-pages": "^3.1.0",
     "movie-trailer": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
